@@ -242,3 +242,5 @@ http://news.cctv.com/2020/07/10/ARTIlxEbF6MxTqGCHp6ZDeAG200710.shtml
 https://focustaiwan.tw/society/202007100023
 https://taronews.tw/2020/07/11/668445/
 https://talk.ltn.com.tw/article/breakingnews/3194811
+https://newtalk.tw/citizen/view/56437
+https://newtalk.tw/news/view/2020-07-13/435258
