@@ -1,3 +1,4 @@
+  - Add a site-specific extractor for newtalk.tw
   - Add a site-specific extractor for talk.ltn.com.tw
 
 v0.30.0 2020-07-12T17:10:32+0800
